--- a/ssh-thunder/package.json
+++ b/ssh-thunder/package.json
@@ -3,7 +3,22 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "test": "set DEBUG=ssh-thunder:test && nodemon --ignore 'P:\\Git\\mmo4me\\ssh-thunder\\test\\5bvssh.js' ./test/5bvssh.js",
+    "dev": "nodemon ./app.js",
+    "ui": "browser-sync start --proxy=localhost:8000 --files='**/*.css, **/*.pug, **/*.js' --ignore=node_modules --reload-delay 10 --no-ui --no-notify",
+    "build" : "browserify app.js --node -o build/app.bundle.js"
+  },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "debug": "^4.1.1",
+    "express": "^4.17.1",
+    "multer": "^1.4.2",
+    "n-readlines": "^1.0.0",
+    "pug": "^2.0.4",
     "tcp-port-used": "^1.0.1"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.26.7"
   }
 }
