beta1 update1 + fix some bug + add start all / renew all

--- a/ssh-thunder/config.json
+++ b/ssh-thunder/config.json
@@ -4,5 +4,6 @@
         "path": "uploads\\a8a778ba904130056e4b53ad3580b190"
     },
     "startPort": 1271,
-    "delim": "|"
+    "delim": "|",
+    "BitviseSshTimeOut": 30000
 }
