--- a/ssh-thunder/config.json
+++ b/ssh-thunder/config.json
@@ -1,7 +1,7 @@
 {
     "file": {
-        "name": "25-04.txt",
-        "path": "uploads\\a8a778ba904130056e4b53ad3580b190"
+        "name": "live.txt",
+        "path": "uploads\\755e33ebd1c29d8a3075335c4a3a513f"
     },
     "startPort": 1271,
     "delim": "|",
